Added pkg-config integration

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,8 @@
 bin_PROGRAMS = xprintidle
 xprintidle_SOURCES = xprintidle.c
 
-AM_CPPFLAGS = -I@x_includes@
-LDADD = -L@x_libraries@ -lX11 -lXss
+xprintidle_CFLAGS = $(XEXT_CFLAGS) $(XSS_CFLAGS) $(X11_CFLAGS)
+xprintidle_LDADD = $(XEXT_CFLAGS) $(XSS_LIBS) $(X11_LIBS)
+
+#AM_CPPFLAGS = -I@x_includes@
+#LDADD = -L@x_libraries@ -lX11 -lXss
