--- a/Makefile.am
+++ b/Makefile.am
@@ -24,49 +24,39 @@ ACLOCAL_AMFLAGS = -I m4
 AM_CPPFLAGS = -Ilib -I$(top_srcdir)/lib -Isrc -I$(top_srcdir)/src
 
 # Additional files to distribute.
-EXTRA_DIST = \
-	README-dev \
-	ChangeLog.O \
-	m4/gnulib-cache.m4 \
-	man/hello.x \
-	contrib/de_franconian_po.txt \
-	contrib/evolution.txt
+EXTRA_DIST = doc/xprintidle.x
 
 # Subdirectories to descend into.
 SUBDIRS = po
 
-bin_PROGRAMS = hello
-hello_SOURCES = src/hello.c src/system.h
+bin_PROGRAMS = xprintidle
 
-hello_LDADD = $(LIBINTL) $(top_builddir)/lib/lib$(PACKAGE).a
+xprintidle_SOURCES = src/xprintidle.c src/system.h
+
+xprintidle_CFLAGS = \
+	$(XEXT_CFLAGS) \
+	$(XSS_CFLAGS) \
+	$(X11_CFLAGS)
+
+xprintidle_LDADD = \
+	$(LIBINTL) \
+	$(top_builddir)/lib/lib$(PACKAGE).a \
+	$(XEXT_LIBS) \
+	$(XSS_LIBS) \
+	$(X11_LIBS) 
 
 localedir = $(datadir)/locale
 DEFS = -DLOCALEDIR=\"$(localedir)\" @DEFS@
 
 CLEANFILES =
 
-if !GIT_CROSS_COMPILING
-man_MANS = hello.1
-EXTRA_DIST += $(man_MANS)
-endif
-
-if BUILD_FROM_GIT
-hello.1: hello
-	$(HELP2MAN) --include=$(top_srcdir)/man/hello.x $(top_builddir)/hello -o $@-t
+xprintidle.1: xprintidle
+	$(HELP2MAN) --include=$(top_srcdir)/doc/xprintidle.x \
+				$(top_builddir)/xprintidle -o $@-t
 	chmod a=r $@-t
 	mv -f $@-t $@
 
 CLEANFILES += $(man_MANS)
-endif
-
-TESTS = \
-	tests/greeting-1 \
-	tests/greeting-2 \
-	tests/hello-1 \
-	tests/last-1 \
-	tests/traditional-1
-
-EXTRA_DIST += $(TESTS)
 
 noinst_LIBRARIES =
 MOSTLYCLEANFILES =
@@ -75,54 +65,31 @@ BUILT_SOURCES =
 
 LOG_COMPILER = $(SHELL)
 
-TESTS_ENVIRONMENT = \
-  top_srcdir=$(top_srcdir) \
-  PATH=.$(PATH_SEPARATOR)$(PATH_SEPARATOR)$$PATH \
-  HELLO=`echo hello | sed '$(transform)'`; \
-  export HELLO PATH top_srcdir;
-
 # Verify that all source files using _() are listed in po/POTFILES.in.
 # The idea is to run this before making pretests, as well as official
 # releases, so that translators will be sure to have all the messages.
 # (From coreutils.)
 po-check:
-	if test -f po/POTFILES.in; then					\
-	  grep -E -v '^(#|$$)' po/POTFILES.in				\
-	    | grep -v '^src/false\.c$$' | sort > $@-1;			\
-	  files=;							\
-	  for file in $$($(CVS_LIST_EXCEPT)) `find * -name '*.[ch]'`; do \
-	    case $$file in						\
-	    gnulib/* | man/*) continue;;				\
-	    esac;							\
-	    case $$file in						\
-	    *.[ch])							\
-	      base=`expr " $$file" : ' \(.*\)\..'`;			\
-	      { test -f $$base.l || test -f $$base.y; } && continue;;	\
-	    esac;							\
-	    files="$$files $$file";					\
-	  done;								\
-	  grep -E -l '\b(N?_|gettext *)\([^)"]*("|$$)' $$files		\
-	    | sort -u > $@-2;						\
-	  diff -u $@-1 $@-2 || exit 1;					\
-	  rm -f $@-1 $@-2;						\
+	if test -f po/POTFILES.in; then										\
+	  grep -E -v '^(#|$$)' po/POTFILES.in								\
+	    | grep -v '^src/false\.c$$' | sort > $@-1;						\
+	  files=;															\
+	  for file in $$($(CVS_LIST_EXCEPT)) `find * -name '*.[ch]'`; do	\
+	    case $$file in													\
+	    gnulib/* | doc/*) continue;;									\
+	    esac;															\
+	    case $$file in													\
+	    *.[ch])															\
+	      base=`expr " $$file" : ' \(.*\)\..'`;							\
+	      { test -f $$base.l || test -f $$base.y; } && continue;;		\
+	    esac;															\
+	    files="$$files $$file";											\
+	  done;																\
+	  grep -E -l '\b(N?_|gettext *)\([^)"]*("|$$)' $$files				\
+	    | sort -u > $@-2;												\
+	  diff -u $@-1 $@-2 || exit 1;										\
+	  rm -f $@-1 $@-2;													\
 	fi
 
 include $(top_srcdir)/lib/local.mk
 include $(top_srcdir)/doc/local.mk
-
-dist-hook: gen-ChangeLog
-	chmod u+w $(distdir)/$(man_MANS)
-
-gen_start_date = 2011-12-17
-.PHONY: gen-ChangeLog
-gen-ChangeLog:
-	$(AM_V_GEN)if test -d .git; then				\
-	  log_fix="$(srcdir)/build-aux/git-log-fix";			\
-	  test -e "$$log_fix"						\
-	    && amend_git_log="--amend=$$log_fix"			\
-	    || amend_git_log=;						\
-	  $(top_srcdir)/build-aux/gitlog-to-changelog			\
-	    $$amend_git_log --since=$(gen_start_date) > $(distdir)/cl-t && \
-	    { rm -f $(distdir)/ChangeLog &&				\
-	      mv $(distdir)/cl-t $(distdir)/ChangeLog; }		\
-	fi
