--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -89,33 +89,7 @@ git        1.5.5
 tar        -
 "
 
-bootstrap_post_import_hook ()
-{
-  # Automake requires that ChangeLog exist.
-  touch ChangeLog || return 1
+bootstrap_post_import_hook () {
   # Massage lib/gnulib.mk before using it later in the bootstrapping process.
   build-aux/prefix-gnulib-mk --lib-name=$gnulib_name lib/$gnulib_mk
-}
-
-# File that should exist in the top directory of a checked out hierarchy,
-# but not in a distribution tarball.
-checkout_only_file=README-dev
-
-bootstrap_epilogue()
-{
-  # Install our git hooks, as long as "cp" accepts the --backup option,
-  # so that we can back up any existing files.
-  case $(cp --help) in *--backup*) backup=1;; *) backup=0;; esac
-  if test $backup = 1; then
-    hooks=$(cd scripts/git-hooks && git ls-files)
-    for f in $hooks; do
-      if [ -f .git/hooks/$f ]; then
-	# If it is identical, skip it.
-	cmp scripts/git-hooks/$f .git/hooks/$f > /dev/null \
-	  && continue
-      fi
-      cp --backup=numbered scripts/git-hooks/$f .git/hooks
-      chmod a-w .git/hooks/$f
-    done
-  fi
 }
