xprintidle -> xprintidle-ng

--- a/.gitignore
+++ b/.gitignore
@@ -20,21 +20,21 @@
 /doc/*.log
 /doc/*.pdf
 /doc/*.toc
-/doc/xprintidle.??
-/doc/xprintidle.??s
+/doc/xprintidle-ng.??
+/doc/xprintidle-ng.??s
 /doc/stamp-vti
 /doc/wwwtemp
 /GNUmakefile
-/xprintidle
-/xprintidle-*.tar.*
-/xprintidle.1
+/xprintidle-ng
+/xprintidle-ng-*.tar.*
+/xprintidle-ng.1
 /INSTALL
 /lib
 /m4
 /maint.mk
 /Makefile
 /Makefile.in
-/doc/xprintidle.1
+/doc/xprintidle-ng.1
 /po-check-1
 /po-check-2
 /po/*.gmo
