--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,15 @@ compiler:
 
 before_install:
   - sudo apt-get update -qq
-  - echo "Installing libraries"
+  - \# Installing libraries
   - sudo apt-get install -qq libxss-dev
-  - echo "Installing build tools"
+  - \# Installing build tools
   - sudo apt-get install -qq build-essential
   - sudo apt-get install -qq automake autoconf libtool gettext
   - sudo apt-get install -qq pkg-config
+
+script:
+  - ./bootstrap
+  - ./configure
+  - make
+  - make test
