Travis now uses the Ubuntu gnulib package for faster builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,11 @@ addons:
     - pkg-config
     - help2man
     - texinfo
+    - gnulib
 
 script:
-  - ./bootstrap
+  - ./bootstrap --no-git --copy --gnulib-srcdir=/usr/share/gnulib
   - ./configure
   - make
   - make check
+  - make install
