Revert changes to Travis build, since gnulib is not yet a whitelisted package

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,11 +19,9 @@ addons:
     - pkg-config
     - help2man
     - texinfo
-    - gnulib
 
 script:
-  - ./bootstrap --no-git --gnulib-srcdir=/usr/share/gnulib
+  - ./bootstrap
   - ./configure
   - make
   - make check
-  - make install
